src/objects/QPMS__Change_Management_History__c.object
<CustomObject>
    <description>Audit Trail Object for Change Management module.</description>
    <fields>
        <fullName>QPMS__Action__c</fullName>
        <defaultValue>&apos;Updated&apos;</defaultValue>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldApiName__c</fullName>
        <label>FieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldName__c</fullName>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_ModifiedBy__c</fullName>
        <description>Last Modified By Name for audit trail</description>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last ModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NewValue__c</fullName>
        <label>NewValue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Sub_Parent__c</fullName>
        <description>This field is used to save task title</description>
        <label>New Sub Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Object__c</fullName>
        <label>Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__OldValue__c</fullName>
        <label>OldValue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>QPMS__Change_Management__c</referenceTo>
        <relationshipLabel>Change Management Histories</relationshipLabel>
        <relationshipName>Change_Management_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent_Formula__c</fullName>
        <formula>TEXT( QPMS__Sub_Parent__c ) +&apos; &apos;+  QPMS__New_Sub_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent__c</fullName>
        <label>Sub Parent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Resolution</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>CR Init</fullName>
                </value>
                <value>
                    <fullName>CR Approval</fullName>
                </value>
                <value>
                    <fullName>Resolution Approval</fullName>
                </value>
                <value>
                    <fullName>Closure Approval</fullName>
                </value>
                <value>
                    <fullName>DocumentChange Change Due Date</fullName>
                </value>
                <value>
                    <fullName>DocumentChange Approval</fullName>
                </value>
                <value>
                    <fullName>Closure Change Owner Approval</fullName>
                </value>
                <value>
                    <fullName>Closure Change Owner</fullName>
                </value>
                <value>
                    <fullName>AdhocTask Approval</fullName>
                </value>
                <value>
                    <fullName>DocumentChange Change Due Date Approval</fullName>
                </value>
                <value>
                    <fullName>CR Void</fullName>
                </value>
                <value>
                    <fullName>DocumentChange Change Owner Approval</fullName>
                </value>
                <value>
                    <fullName>DocumentChange Change Owner</fullName>
                </value>
                <value>
                    <fullName>AdhocTask Change Owner Approval</fullName>
                </value>
                <value>
                    <fullName>AdhocTask Change Owner</fullName>
                </value>
                <value>
                    <fullName>Closure Change Due Date Approval</fullName>
                </value>
                <value>
                    <fullName>Document Change</fullName>
                </value>
                <value>
                    <fullName>AdhocTask Change Due Date Approval</fullName>
                </value>
                <value>
                    <fullName>AdhocTask Change Due  Approval</fullName>
                </value>
                <value>
                    <fullName>Closure Change Due Date</fullName>
                </value>
                <value>
                    <fullName>CR Change Owner</fullName>
                </value>
                <value>
                    <fullName>Closure Change Due  Approval</fullName>
                </value>
                <value>
                    <fullName>DocumentChange Change Due  Approval</fullName>
                </value>
                <value>
                    <fullName>AdhocTask Change Due Date</fullName>
                </value>
                <value>
                    <fullName>ClosureReassign Approver</fullName>
                </value>
                <value>
                    <fullName>CR Adhoc</fullName>
                </value>
                <value>
                    <fullName>CR Change Owner Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Change Management History</label>
    <nameField>
        <displayFormat>CMH-{0000}</displayFormat>
        <label>Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Management Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>